option java_outer_classname = "LCDownCommonRes";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal";

import "core/proto/common/java/ResponseResult.proto";

message DownCommonRes{
	
	required int32 serialNumber = 1;
	required int32 responseId = 2;
	required ResponseResult result = 3;
}
